--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
         <div class="clock__allhands--sec clock__allhands--hand"></div>
       </div>
     </div>
+
+    <div class="clock__analog">
+      <div class="class__analog--hr"></div>
+      <span>:</span>
+      <div class="class__analog--min"></div>
+      <span>:</span>
+      <div class="class__analog--sec"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
